# peyote-patter

./: .gitignore  LICENSE  README.md  SKILL.md  font.py  main.py  peyote.py  pyproject.toml
.claude/commands/: peyote-pattern.md
peyote/: __init__.py  cli.py  colors.py  compose.py  editor.py  export.py  font.py  font_bitmap.py  font_ttf.py  grid.py  gui.py  patterns.py  renderer.py  sizing.py
references/: png-renderer.md  widget-template.md
tests/: conftest.py  test_cli.py  test_colors.py  test_compose.py  test_editor.py  test_export.py  test_font.py  test_font_ttf.py  test_grid.py  test_patterns.py  test_renderer.py  test_sizing.py  test_wrappers.py
