[project]
name = "peyote-pattern"
version = "0.2.0"
description = "Peyote bead pattern generator with text, decorative patterns, and GUI"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Giles Knap", email = "gilesknap@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "cairosvg>=2.9.0",
    "nicegui>=3.10.0",
    "pillow>=12.2.0",
]

[project.scripts]
peyote = "peyote.cli:main"
peyote-gui = "peyote.gui:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["peyote"]
